# volvo_synthetic_sequence

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindCaffe.cmake
nets/models/VGGM_ROIPOOL/: VGGM_ROIPOOL_NO_PAD_deploy.prototxt  VGGM_ROIPOOL_deploy.prototxt
src/: BgSubtractor.cpp  BgSubtractor.h  DataManager.h  FrameLoader.cpp  FrameLoader.h  Renderer.cpp  Renderer.h  main.cpp  main_pf.cpp  main_pose.cpp
src/FeatureExtractor/: Constants.h  FeatureExtractorBase.cpp  FeatureExtractorBase.h  FeatureExtractorCNN.cpp  FeatureExtractorCNN.h
src/ParticleFilter/: BoundingBox.cpp  BoundingBox.h  PFTracker.cpp  PFTracker.h  Particle.cpp  Particle.h  ParticleFilter.cpp  ParticleFilter.h
src/Pose/: Joint.cpp  Joint.h  KinematicTreeNode.cpp  KinematicTreeNode.h  PoseEncoding.cpp  PoseEncoding.h  PoseRepre.cpp  PoseRepre.h
src/Rendering/: AppConfig.cpp  AppConfig.h  BgSubtractor.h  Common.h  DataManager.h  FrameLoader.cpp  FrameLoader.h  Renderer.cpp
